perfected ServerApp